--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- Custom styles -->
-    <link rel="stylesheet" href="mainstyle.css">
+    <link rel="stylesheet" href="https://brendanmanning.github.io/SketchadelphiaWeb/mainstyle.css">
 
     <!-- Mobile fix -->
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
