--- a/index.html
+++ b/index.html
@@ -433,7 +433,10 @@
             data: {
                 "Temple University": "https://pbs.twimg.com/profile_images/999732458470883328/Z7Q58gaZ_400x400.jpg",
                 "Independence Hall": 'http://states.phillipmartin.info/pennsylvania/pennsylvania_liberty_hall.png',
-                "Citizens Bank Park": 'https://upload.wikimedia.org/wikipedia/en/thumb/8/84/Philadelphia_Phillies.svg/1200px-Philadelphia_Phillies.svg.png'
+                "Citizens Bank Park": 'https://upload.wikimedia.org/wikipedia/en/thumb/8/84/Philadelphia_Phillies.svg/1200px-Philadelphia_Phillies.svg.png',
+                "Philadelphia Zoo": "https://i.pinimg.com/236x/f3/26/fb/f326fb350cf94a471feeb39fa34eb29f--lion-clipart-vector-clipart.jpg",
+                "Philadelphia City Hall": "https://images.mentalfloss.com/sites/default/files/styles/mf_image_16x9/public/istock_67318445_small.jpg?itok=6zE9JHT_&resize=1100x1100",
+                "Thomas Jefferson University": "https://www.underconsideration.com/brandnew/archives/jefferson_university_2017_monogram.png"
             }
         });
     });
