--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
         if(getUrlVars()['demo'] != undefined) {
             document.getElementById("fromInput").value = "Temple University";
             document.getElementById("toInput").value = "Independence Hall";
+            document.getElementById("directionsButton").disabled = false;
         }
     });
 
