--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         for(var m = 0; m < markers.length; m++) {
             markers[m].setMap(null);
         }
-        markers = p[l]
+        markers = [];
     }
     
     const numberFormat = (x) => {
