--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <div class="col s12">
                 <div class="nav-content" style="color: white; font-weight: bold;">
                     <p>How sketchy is your next drive through Philly??</p>
+                    <p>(Enter any address in the city)</p>
                 </div>
             </div>
             <div class="col s12">
