Updated statistic description

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     function showRouteStatistics() {
         document.getElementById("statistics").style.display = "block";
         document.getElementById("sketchFactorStat").innerHTML = numberFormat(json['reportedIncidents']);
-        document.getElementById("sketchFactorExplanationStat").innerHTML = "crimes reported along this route (since 2017).";
+        document.getElementById("sketchFactorExplanationStat").innerHTML = "crimes reported along this route in 2018.";
     }
     
     function showGridStatistics() {
