--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         var b = o.b;
 
         var bin = r << 16 | g << 8 | b;
-        return (function(h){
+        return "#" + (function(h){
             return new Array(7-h.length).join("0")+h
         })(bin.toString(16).toUpperCase())
     }
