--- a/index.html
+++ b/index.html
@@ -318,15 +318,15 @@
         };
 
         if( i == a) {
-            return rgbToHex(yellow);
+            return "yellow";
         }
 
         if( i > a ) {
-            return rgbToHex(red);
+            return "red";
         } 
 
         if( i < a ) {
-            return rgbToHex(green);
+            return "rgb(130,130,20)";
         }
     }
 
