--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
             var steps = legs[l]['steps'];
             for (var s = 0; s < steps.length; s++) {
                 var color = getColor(grids[whichGrid(steps[s]['polyline']['points'][0])]['incidents'].length, json['averageIncidentsPerGrid']);
+                alert(color);
                 var path = decodePolylineString(steps[s]['polyline']['points']);
                 var polyline = new google.maps.Polyline({
                     path: path,
