--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
         for (var l = 0; l < legs.length; l++) {
             var steps = legs[l]['steps'];
             for (var s = 0; s < steps.length; s++) {
-                var color = getColor(grids[whichGrid(steps[s]['polyline']['points'][0])]['incidents'].length, json['averageIncidentsPerGrid']);
-                console.log(color);
+                //var color = getColor(grids[whichGrid(steps[s]['polyline']['points'][0])]['incidents'].length, json['averageIncidentsPerGrid']);
+                //console.log(color);
                 var path = decodePolylineString(steps[s]['polyline']['points']);
                 var polyline = new google.maps.Polyline({
                     path: path,
