Pardon my bad spelling :P

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </li>
         <li>
             <div class="collapsible-header"><i class="material-icons">info_outline</i>About</div>
-            <div class="collapsible-body"><div style="overflow: auto; display: block"><p>Hi! I'm <a href="https://github.com/brendanmanning">Brendan Manning</a>, a Computer Science & Physics major at Temple University.</p><p>I created Sketchadelphia after a sketchy Uber ride through North Philadelphia. This interactive demonstration is meant to that companies like Uber and Lyft should factor rider safety into their algorithms.</p><p>If you are from a tech company looking to incorportate Sketchadelphia features into your app, please <a href="mailto:tuj97064@temple.edu">send me an email</a></p><p>If you are a recruiter, lets <a href="https://www.linkedin.com/in/brendan-m-544823a2/">Connect on Linkedin!</a></p></div></div>
+            <div class="collapsible-body"><div style="overflow: auto; display: block"><p>Hi! I'm <a href="https://github.com/brendanmanning">Brendan Manning</a>, a Computer Science & Physics major at Temple University.</p><p>I created Sketchadelphia after a sketchy Uber ride through North Philadelphia. This interactive demonstration is meant to show that companies like Uber and Lyft should factor rider safety into their algorithms.</p><p>If you are from a tech company looking to incorportate Sketchadelphia features into your app, please <a href="mailto:tuj97064@temple.edu">send me an email</a></p><p>If you are a recruiter, lets <a href="https://www.linkedin.com/in/brendan-m-544823a2/">Connect on Linkedin!</a></p></div></div>
         </li>
     </ul>
 
@@ -277,7 +277,7 @@
     function showGridStatistics() {
         document.getElementById("statistics").style.display = "block";
         document.getElementById("sketchFactorStat").innerHTML = numberFormat(json['grids'][activeGrid]['incidents'].length);
-        document.getElementById("sketchFactorExplanationStat").innerHTML = "crimes reported in this segment of your trip (since 2017).";
+        document.getElementById("sketchFactorExplanationStat").innerHTML = "crimes reported in this segment of your trip in 2018.";
     }
     function plotDirections() {
         var route = json['googleResponse']['routes'][0];
