--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             zoom: 12,
             center: myLatLng,
             disableDefaultUI: true,
-            style: [
+            styles: [
     {
         "featureType": "administrative",
         "elementType": "labels.text.fill",
