--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@
                     path: path,
                     geodesic: true,
                     strokeOpacity: 1.0,
-                    strokeWeight: 2,
+                    strokeWeight: 4,
+                    color: '#3D87B4'
                 });
                 polylines.push(polyline);
                 polyline.setMap(map);
