--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     geodesic: true,
                     strokeOpacity: 1.0,
                     strokeWeight: 4,
-                    color: '#3D87B4'
+                    strokeColor: '#3D87B4'
                 });
                 polylines.push(polyline);
                 polyline.setMap(map);
