--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
     <ul id="slide-out" class="sidenav">
 
         <nav>
-            <div class="nav-wrapper" style="background-color: #0d47a1; height: 64px;">
+            <div class="nav-wrapper" style="background-color: #3D87B4; height: 64px;">
                 <a href="#" class="brand-logo" style="font-size: 21px; margin-left: 8px;">Sketchadelphia</a>
             </div>
         </nav>
 
 
-        <div class="row" style="background-color: #2196f3; height: calc(100% - 14px); overflow: hidden">
+        <div class="row" style="background-color: #C7DFED; height: calc(100% - 14px); overflow: hidden">
             <div class="col s12">
                 <div class="nav-content" style="color: white; font-weight: bold;">
                     <p>How sketchy is your next drive through Philly??</p>
