--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </nav>
 
 
-        <div class="row" style="background-color: #C7DFED; height: calc(100% - 14px); overflow: hidden">
+        <div class="row" style="background-color: #469BCF; height: calc(100% - 14px); overflow: hidden">
             <div class="col s12">
                 <div class="nav-content" style="color: white; font-weight: bold;">
                     <p>How sketchy is your next drive through Philly??</p>
