--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!-- FAB -->
     <div class="fixed-action-btn">
-        <a class="btn-floating btn-large red sidenav-trigger" href="#" data-target="slide-out">
+        <a class="btn-floating btn-large blue sidenav-trigger" href="#" data-target="slide-out">
             <i class="large material-icons">explore</i>
         </a>
     </div>
