Oops. No "var" in function definition lol

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         
     }
     
-    function getPercentile(var i, var percentiles) {
+    function getPercentile(i, percentiles) {
         for(var p = 0; p < percentiles.length; p++) {
             if(i <= percentiles[p]['upperBound']) {
                 return percentiles[p];   
