--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
     }
     
     function getColorForPercentile(percentileIndex) {
-        var colors = [ '#ff6666', '#ff8c66', '#ffb366', '#ffd966', '#ffff66', '#d9ff66', '#b3ff66', '#8cff66', '#66ff66', '#66ff66' ];
+        var colors = [ '#66ff66', '#66ff66',  '#8cff66', '#b3ff66', '#d9ff66', '#ffff66', '#ffd966', '#ffb366', '#ff8c66', '#ff6666' ];
         return colors[percentileIndex];
     }
     
