--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
         document.getElementById("statistics").style.display = "block";
         document.getElementById("sketchFactorStat").innerHTML = numberFormat(json['reportedIncidents']);
         document.getElementById("sketchFactorExplanationStat").innerHTML = "crimes reported along this route in 2018.";
+        alert("This route is in the " + getAveragePercentileForRoute() + "th percentile of safety.")
     }
 
     function showGridStatistics() {
@@ -530,6 +531,14 @@
     function getColorForPercentile(percentileIndex) {
         var colors = ['#66ff66', '#66ff66', '#8cff66', '#b3ff66', '#d9ff66', '#ffff66', '#ffd966', '#ffb366', '#ff8c66', '#ff6666'];
         return colors[percentileIndex];
+    }
+
+    function getAveragePercentileForRoute() {
+        var t = 0;
+        for(var i = 0; i < json['percentiles'].length; i++) {
+            t += json['percentiles'][p]['percentile'];
+        }
+        return t / json['percentiles'].length;
     }
 
     function toggleIncidents(gridIndex) {
