--- a/index.html
+++ b/index.html
@@ -534,11 +534,7 @@
     }
 
     function getAveragePercentileForRoute() {
-        var t = 0;
-        for(var i = 0; i < json['percentiles'].length; i++) {
-            t += json['percentiles'][i]['percentile'];
-        }
-        return t / json['percentiles'].length;
+        return json['percentiles'][(json['reportedIncidents']/json['grids'].length)]['percentile'];
     }
 
     function toggleIncidents(gridIndex) {
