--- a/index.html
+++ b/index.html
@@ -587,42 +587,45 @@
     }
 
     function getIconForIncident(incident) {
+
+        incident = incident.replace(/ /g,'');
+
         var map = {
-            "All Other Offenses": "ASTERISK",
-            "Other Assaults": "ASTERISK",
+            "AllOtherOffenses": "ASTERISK",
+            "OtherAssaults": "ASTERISK",
             "Thefts": "CROWBAR",
             "Vandalism/Criminal Mischief": "SPRAYPAINT",
-            "Theft from Vehicle": "CARTHEFT",
-            "Narcotic / Drug Law Violations": "PILL",
+            "TheftfromVehicle": "CARTHEFT",
+            "Narcotic/DrugLawViolations": "PILL",
             "Fraud": "MONEY",
-            "Recovered Stolen Motor Vehicle": "CARTHEFT",
-            "Burglary Residential": "CROWBAR",
-            "Aggravated Assault No Firearm": "SKIMASK",
-            "DRIVING UNDER THE INFLUENCE": "BOOZE",
-            "Robbery No Firearm": "CROWBAR",
-            "Motor Vehicle Theft": "CARTHEFT",
-            "Robbery Firearm": "GUN",
-            "Disorderly Conduct": "ASTERISK",
-            "Aggravated Assault Firearm": "SKIMASK",
-            "Burglary Non-Residential": "SKIMASK",
-            "Weapon Violations": "GUN",
-            "Other Sex Offenses (Not Commercialized)": "XXX",
-            "Prostitution and Commercialized Vice": "XXX",
+            "RecoveredStolenMotorVehicle": "CARTHEFT",
+            "BurglaryResidential": "CROWBAR",
+            "AggravatedAssaultNoFirearm": "SKIMASK",
+            "DRIVINGUNDERTHEINFLUENCE": "BOOZE",
+            "RobberyNoFirearm": "CROWBAR",
+            "MotorVehicleTheft": "CARTHEFT",
+            "RobberyFirearm": "GUN",
+            "DisorderlyConduct": "ASTERISK",
+            "AggravatedAssaultFirearm": "SKIMASK",
+            "BurglaryNon-Residential": "SKIMASK",
+            "WeaponViolations": "GUN",
+            "OtherSexOffenses(NotCommercialized)": "XXX",
+            "ProstitutionandCommercializedVice": "XXX",
             "Rape": "XXX",
             "Vagrancy/Loitering": "ASTERISK",
             "Arson": "FIRE",
-            "Liquor Law Violations": "BOOZE",
+            "LiquorLawViolations": "BOOZE",
             "Embezzlement": "MONEY",
-            "Forgery and Counterfeiting": "MONEY",
-            "Public Drunkenness": "BOOZE",
-            "Homicide - Criminal": "SKULL",
-            "Offenses Against Family and Children": "FAMILY",
-            " ": "ASTERISK",
-            "Gambling Violations": "DICE",
-            "Receiving Stolen Property": "CROWBAR",
-            "Homicide - Criminal": "SKULL",
-            "Homicide - Justifiable": "SKULL",
-            "Homicide - Gross Negligence": "SKULL"
+            "ForgeryandCounterfeiting": "MONEY",
+            "PublicDrunkenness": "BOOZE",
+            "Homicide-Criminal": "SKULL",
+            "OffensesAgainstFamilyandChildren": "FAMILY",
+            "": "ASTERISK",
+            "GamblingViolations": "DICE",
+            "ReceivingStolenProperty": "CROWBAR",
+            "Homicide-Criminal": "SKULL",
+            "Homicide-Justifiable": "SKULL",
+            "Homicide-Gross Negligence": "SKULL"
         }
 
         return map[incident];
