--- a/index.html
+++ b/index.html
@@ -588,44 +588,44 @@
 
     function getIconForIncident(incident) {
 
-        incident = incident.replace(/ /g,'');
+        incident = incident.toUpperCase().replace(/ /g,'');
 
         var map = {
-            "AllOtherOffenses": "ASTERISK",
-            "OtherAssaults": "ASTERISK",
-            "Thefts": "CROWBAR",
-            "Vandalism/Criminal Mischief": "SPRAYPAINT",
-            "TheftfromVehicle": "CARTHEFT",
-            "Narcotic/DrugLawViolations": "PILL",
-            "Fraud": "MONEY",
-            "RecoveredStolenMotorVehicle": "CARTHEFT",
-            "BurglaryResidential": "CROWBAR",
-            "AggravatedAssaultNoFirearm": "SKIMASK",
+            "ALLOTHEROFFENSES": "ASTERISK",
+            "OTHERASSAULTS": "ASTERISK",
+            "THEFTS": "CROWBAR",
+            "VANDALISM/CRIMINAL MISCHIEF": "SPRAYPAINT",
+            "THEFTFROMVEHICLE": "CARTHEFT",
+            "NARCOTIC/DRUGLAWVIOLATIONS": "PILL",
+            "FRAUD": "MONEY",
+            "RECOVEREDSTOLENMOTORVEHICLE": "CARTHEFT",
+            "BURGLARYRESIDENTIAL": "CROWBAR",
+            "AGGRAVATEDASSAULTNOFIREARM": "SKIMASK",
             "DRIVINGUNDERTHEINFLUENCE": "BOOZE",
-            "RobberyNoFirearm": "CROWBAR",
-            "MotorVehicleTheft": "CARTHEFT",
-            "RobberyFirearm": "GUN",
-            "DisorderlyConduct": "ASTERISK",
-            "AggravatedAssaultFirearm": "SKIMASK",
-            "BurglaryNon-Residential": "SKIMASK",
-            "WeaponViolations": "GUN",
-            "OtherSexOffenses(NotCommercialized)": "XXX",
-            "ProstitutionandCommercializedVice": "XXX",
-            "Rape": "XXX",
-            "Vagrancy/Loitering": "ASTERISK",
-            "Arson": "FIRE",
-            "LiquorLawViolations": "BOOZE",
-            "Embezzlement": "MONEY",
-            "ForgeryandCounterfeiting": "MONEY",
-            "PublicDrunkenness": "BOOZE",
-            "Homicide-Criminal": "SKULL",
-            "OffensesAgainstFamilyandChildren": "FAMILY",
+            "ROBBERYNOFIREARM": "CROWBAR",
+            "MOTORVEHICLETHEFT": "CARTHEFT",
+            "ROBBERYFIREARM": "GUN",
+            "DISORDERLYCONDUCT": "ASTERISK",
+            "AGGRAVATEDASSAULTFIREARM": "SKIMASK",
+            "BURGLARYNON-RESIDENTIAL": "SKIMASK",
+            "WEAPONVIOLATIONS": "GUN",
+            "OTHERSEXOFFENSES(NOTCOMMERCIALIZED)": "XXX",
+            "PROSTITUTIONANDCOMMERCIALIZEDVICE": "XXX",
+            "RAPE": "XXX",
+            "VAGRANCY/LOITERING": "ASTERISK",
+            "ARSON": "FIRE",
+            "LIQUORLAWVIOLATIONS": "BOOZE",
+            "EMBEZZLEMENT": "MONEY",
+            "FORGERYANDCOUNTERFEITING": "MONEY",
+            "PUBLICDRUNKENNESS": "BOOZE",
+            "HOMICIDE-CRIMINAL": "SKULL",
+            "OFFENSESAGAINSTFAMILYANDCHILDREN": "FAMILY",
             "": "ASTERISK",
-            "GamblingViolations": "DICE",
-            "ReceivingStolenProperty": "CROWBAR",
-            "Homicide-Criminal": "SKULL",
-            "Homicide-Justifiable": "SKULL",
-            "Homicide-Gross Negligence": "SKULL"
+            "GAMBLINGVIOLATIONS": "DICE",
+            "RECEIVINGSTOLENPROPERTY": "CROWBAR",
+            "HOMICIDE-CRIMINAL": "SKULL",
+            "HOMICIDE-JUSTIFIABLE": "SKULL",
+            "HOMICIDE-GROSS NEGLIGENCE": "SKULL"
         }
 
         return map[incident];
