--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
             "HOMICIDE-GROSS NEGLIGENCE": "SKULL"
         }
 
-        return map[incidentDescription];
+        return "img/" + map[incidentDescription] + ".png";
 
     }
 
