--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
         var incidents = json['grids'][gridIndex]['incidents'];
         for (var i = 0; i < incidents.length; i++) {
             var incident = incidents[i];
-            var icon = getIconForIncident(incident['description']);
+            var icon = alert(incident['description'] + " ==> " + getIconForIncident(incident['description']));
             var marker = new google.maps.Marker({
                 position: {
                     lat: incident['coordinates']['lat'],
