Switching back to basic marker

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                 },
                 map: map,
                 icon: {
-                    url: icon,
+                    url: "img/MARKER.png",
                     scaledSize: new google.maps.Size(20, 20)
                 }
             });
