Removed pesky alert

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         document.getElementById("statistics").style.display = "block";
         document.getElementById("sketchFactorStat").innerHTML = numberFormat(json['reportedIncidents']);
         document.getElementById("sketchFactorExplanationStat").innerHTML = "crimes reported along this route in 2018.";
-        alert("This route is in the " + getAveragePercentileForRoute() + "th percentile of safety.")
+        //alert("This route is in the " + getAveragePercentileForRoute() + "th percentile of safety.")
     }
 
     function showGridStatistics() {
