--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
 <head>
     <title>Sketchadelphia</title>
 
+<dependency>
+        <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>1.11.3</version>
+    </dependency>
+
+    <meta name="description" content="How sketchy is your next drive through Philly?">
+
     <!-- Materialize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -92,7 +101,7 @@
     <!-- FAB -->
     <div class="fixed-action-btn">
         <a class="btn-floating btn-large blue sidenav-trigger" href="#" data-target="slide-out">
-            <i class="large material-icons">explore</i>
+            <i class="large material-icons">search</i>
         </a>
     </div>
 
