--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <!-- FAB -->
     <div class="fixed-action-btn">
-        <a class="btn-floating btn-large blue sidenav-trigger" href="#" data-target="slide-out">
+        <a class="btn-floating btn-large blue sidenav-trigger" href="http://sketchadelphia.com">
             <i class="large material-icons">search</i>
         </a>
     </div>
