--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="collapsible-body">
                 <p>
                     <label>
-                        <input id="showUnderlyingGrids" type="checkbox" onchange="gridToggled()" />
+                        <input id="showUnderlyingGrids" type="checkbox" onchange="gridToggled()" checked="checked" />
                         <span>Showing underlying grids</span>
                     </label>
                 </p>
@@ -418,6 +418,7 @@
     function presentRoute() {
         plotDirections(json['googleResponse']);
         showRouteStatistics(json);
+        gridToggled();
     }
 
     function showRouteStatistics() {
